--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "ethers": "^5.6.9",
+    "graphql": "^16.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
+    "react-icons": "^4.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.21.0",
