--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -17,5 +17,10 @@
     "NFTMarketplace": [
       "0x5FbDB2315678afecb367f032d93F642f64180aa3"
     ]
+  },
+  "11155111":{
+    "NFTMarketplace":[
+      "0xDeC9910B057B7FcE426bf348393d6ae81d0De740"
+    ]
   }
 }
