--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll-hook": "^4.1.1",
+    "react-responsive": "^9.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
