--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
     "react-infinite-scroll-hook": "^4.1.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-responsive": "^9.0.2",
     "uuid": "^8.3.2"
   },
